--- a/templates/login.html
+++ b/templates/login.html
@@ -53,7 +53,7 @@
                             <span class="checkmark"></span>
                             Remember me
                         </label>
-                        <a href="#" class="forgot-password">Forgot Password?</a>
+                        <a href="{{ url_for('forgot_password') }}" class="forgot-password">Forgot Password?</a>
                     </div>
                     
                     <div class="form-submit">
